--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,6 +1,10 @@
-<h3>{{ product.title }}</h3>
-
-<img [src]="product.image" alt="{{ product.description }}" />
-<strong>
-  {{ product.price }}
-</strong>
+<h3 appHighlight>{{ product.title | uppercase }}</h3>
+<img
+  class="product-img img-fluid"
+  [src]="product.image"
+  alt="{{ product.description }}"
+/>
+<strong> {{ product.price | currency }} </strong>
+<p>{{ product.description | slice: 0:10 }}</p>
+<p>{{ today | date: "HH:mm" }}</p>
+<button class="btn" (click)="addCart()">Agregar al Carrito</button>
