--- a/src/app/home/components/banner/banner.component.html
+++ b/src/app/home/components/banner/banner.component.html
@@ -1,13 +1,7 @@
-<swiper
-  [slidesPerView]="1"
-  [spaceBetween]="50"
-  (swiper)="onSwiper($event)"
-  (slideChange)="onSlideChange()"
-  [navigation]="true"
-  [pagination]="{ clickable: true }"
-  [scrollbar]="{ draggable: true }"
->
-  <ng-template swiperSlide *ngFor="let img of images">
-    <img [src]="img" alt="imagenes del banner" />
-  </ng-template>
-</swiper>
+<div class="swiper-container">
+  <div class="swiper-wrapper">
+    <div class="swiper-slide" *ngFor="let img of images">
+      <img [src]="img" alt="imagen del banner">
+    </div>
+  </div>
+</div>
