--- a/src/app/admin/components/nav/nav.component.html
+++ b/src/app/admin/components/nav/nav.component.html
@@ -8,6 +8,7 @@
       <a mat-list-item routerLink="/admin/create">Crear producto</a>
       <a mat-list-item routerLink="/admin/table">Table</a>
       <a mat-list-item routerLink="/admin/dashboard">Dashboard</a>
+      <a mat-list-item routerLink="/admin/products"> Productos</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
